[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/exit.png" type="Texture" id=1]
[ext_resource path="res://Exit.gd" type="Script" id=2]
[ext_resource path="res://sprites/going through exit.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0

[node name="Exit" type="Node2D"]
position = Vector2( 32, 32 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
light = ExtResource( 3 )
non_light = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -32, -32 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -32, -32 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -32, -32 )
emitting = false
amount = 20
speed_scale = 0.5
process_material = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
