[gd_scene load_steps=25 format=2]

[ext_resource path="res://BraveEightyoneRegular-ZVGvm.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/CornerTile.png" type="Texture" id=2]
[ext_resource path="res://sprites/Wall_tile.png" type="Texture" id=3]
[ext_resource path="res://sprites/BlueEnter.png" type="Texture" id=4]
[ext_resource path="res://sprites/OrangeEnter.png" type="Texture" id=5]
[ext_resource path="res://sprites/tile.png" type="Texture" id=6]
[ext_resource path="res://sprites/exit.png" type="Texture" id=7]
[ext_resource path="res://sprites/Non_movable Box.png" type="Texture" id=8]
[ext_resource path="res://Double finish.wav" type="AudioStream" id=9]
[ext_resource path="res://sprites/going through exit.png" type="Texture" id=10]
[ext_resource path="res://Single finish.wav" type="AudioStream" id=11]
[ext_resource path="res://Exit.tscn" type="PackedScene" id=12]
[ext_resource path="res://RobotB.tscn" type="PackedScene" id=13]
[ext_resource path="res://RobotO.tscn" type="PackedScene" id=14]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=15]
[ext_resource path="res://Exit.gd" type="Script" id=16]
[ext_resource path="res://Pause.gd" type="Script" id=17]
[ext_resource path="res://RobotO.gd" type="Script" id=18]
[ext_resource path="res://RobotB.gd" type="Script" id=19]
[ext_resource path="res://Caged.wav" type="AudioStream" id=20]
[ext_resource path="res://Level10.gd" type="Script" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 232 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 24 )

[sub_resource type="DynamicFont" id=3]
size = 43
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Level10" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OOB" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OOB"]
position = Vector2( 16, 184 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OOB"]
position = Vector2( 416, 192 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OOB"]
position = Vector2( 608, 192 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OOB"]
position = Vector2( 944, 192 )
shape = SubResource( 1 )

[node name="CollisionShape2D19" type="CollisionShape2D" parent="OOB"]
position = Vector2( 880, -160 )
shape = SubResource( 1 )

[node name="CollisionShape2D20" type="CollisionShape2D" parent="OOB"]
position = Vector2( 800, -168 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="OOB"]
position = Vector2( 752, 616 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="OOB"]
position = Vector2( 672, 616 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="OOB"]
position = Vector2( 72, 488 )
shape = SubResource( 1 )

[node name="CollisionShape2D24" type="CollisionShape2D" parent="OOB"]
position = Vector2( 80, -40 )
shape = SubResource( 1 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="OOB"]
position = Vector2( 51.2, 488 )
shape = SubResource( 1 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="OOB"]
position = Vector2( 272, -168 )
shape = SubResource( 1 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="OOB"]
position = Vector2( 352, -168 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="OOB"]
position = Vector2( 1104, 56 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="OOB"]
position = Vector2( 576, 56 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="OOB"]
position = Vector2( 328, -8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="OOB"]
position = Vector2( 48, 56 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="OOB"]
position = Vector2( -16, 392 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D16" type="CollisionShape2D" parent="OOB"]
position = Vector2( -144, 184 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D17" type="CollisionShape2D" parent="OOB"]
position = Vector2( 976, 392 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D18" type="CollisionShape2D" parent="OOB"]
position = Vector2( 777.5, -8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D21" type="CollisionShape2D" parent="OOB"]
position = Vector2( 777.5, 457.48 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D22" type="CollisionShape2D" parent="OOB"]
position = Vector2( 448, 397.686 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D23" type="CollisionShape2D" parent="OOB"]
position = Vector2( 904, 224 )
shape = SubResource( 2 )

[node name="tiles" type="Node2D" parent="."]
position = Vector2( 24, 16 )

[node name="side1" type="Node2D" parent="tiles"]

[node name="WTile" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 176 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile11" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 240 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile12" type="Sprite" parent="tiles/side1"]
position = Vector2( 384, 304 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile5" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile9" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile10" type="Sprite" parent="tiles/side1"]
position = Vector2( 320, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="WTile6" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile7" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile8" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="WTile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 64, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="Tile" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile5" type="Sprite" parent="tiles/side1"]
position = Vector2( 256, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile6" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile7" type="Sprite" parent="tiles/side1"]
position = Vector2( 192, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile8" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile9" type="Sprite" parent="tiles/side1"]
position = Vector2( 128, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="CTile" type="Sprite" parent="tiles/side1"]
position = Vector2( 96, 80 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile2" type="Sprite" parent="tiles/side1"]
position = Vector2( 96, 336 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile3" type="Sprite" parent="tiles/side1"]
position = Vector2( 352, 80 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile4" type="Sprite" parent="tiles/side1"]
position = Vector2( 352, 336 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="Exit" type="Node2D" parent="tiles/side1" instance=ExtResource( 12 )]
position = Vector2( 64, 238.1 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}
light = ExtResource( 10 )
non_light = ExtResource( 7 )

[node name="Enter" type="Sprite" parent="tiles/side1"]
position = Vector2( 288, 16 )
scale = Vector2( 0.06225, 0.063 )
texture = ExtResource( 5 )
hframes = 2
vframes = 2
frame = 2

[node name="tiles2" type="Node2D" parent="."]
position = Vector2( 552, 16 )

[node name="side1" type="Node2D" parent="tiles2"]

[node name="WTile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 176 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile11" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 240 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 8 )
offset = Vector2( 512, 512 )

[node name="WTile12" type="Sprite" parent="tiles2/side1"]
position = Vector2( 384, 304 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile5" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile9" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile10" type="Sprite" parent="tiles2/side1"]
position = Vector2( 320, 48 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="WTile6" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="WTile7" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile8" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 368 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="WTile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 64, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 3 )
offset = Vector2( 512, 512 )

[node name="Tile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 112 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile5" type="Sprite" parent="tiles2/side1"]
position = Vector2( 256, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile6" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile7" type="Sprite" parent="tiles2/side1"]
position = Vector2( 192, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile8" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 176 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="Tile9" type="Sprite" parent="tiles2/side1"]
position = Vector2( 128, 240 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 6 )
offset = Vector2( 512, 512 )

[node name="CTile" type="Sprite" parent="tiles2/side1"]
position = Vector2( 96, 80 )
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile2" type="Sprite" parent="tiles2/side1"]
position = Vector2( 96, 336 )
rotation = -1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile3" type="Sprite" parent="tiles2/side1"]
position = Vector2( 352, 80 )
rotation = 1.5708
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="CTile4" type="Sprite" parent="tiles2/side1"]
position = Vector2( 352, 336 )
rotation = 3.14159
scale = Vector2( 0.0625, 0.0625 )
texture = ExtResource( 2 )

[node name="Exit" type="Node2D" parent="tiles2/side1" instance=ExtResource( 12 )]
position = Vector2( 320, 48 )
script = ExtResource( 16 )
__meta__ = {
"_edit_group_": true
}
exit = 0
light = ExtResource( 10 )
non_light = ExtResource( 7 )

[node name="Enter2" type="Sprite" parent="tiles2"]
position = Vector2( 160, 400 )
scale = Vector2( 0.06225, 0.063 )
texture = ExtResource( 4 )
hframes = 2
vframes = 2

[node name="RobotO" type="KinematicBody2D" parent="." instance=ExtResource( 14 )]
position = Vector2( 313.5, 37 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 18 )

[node name="RobotB" type="KinematicBody2D" parent="." instance=ExtResource( 13 )]
position = Vector2( 713.5, 421 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 19 )

[node name="World" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="World"]
position = Vector2( 512, 256 )
current = true
limit_left = -256
limit_top = -256
limit_right = 1280
limit_bottom = 856

[node name="Level" type="Label" parent="."]
margin_left = 379.0
margin_top = 144.0
margin_right = 645.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 3 )
text = "Level 9"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="discription" type="Label" parent="."]
margin_left = -58.7745
margin_top = 397.686
margin_right = 1094.23
margin_bottom = 583.686
custom_fonts/font = SubResource( 3 )
text = "Seperation"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_timer" type="Timer" parent="."]
one_shot = true

[node name="Pause" type="CanvasLayer" parent="."]

[node name="Pause" type="Control" parent="Pause" instance=ExtResource( 15 )]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
level = 10

[node name="DFinish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="SFinish" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -4.0
autoplay = true

[connection signal="timeout" from="exit_timer" to="." method="_on_exit_timer_timeout"]
